# sevq_fpga

./: .gitignore  README.md  pyproject.toml  run_fpga_build.py  run_fpga_experiment.py  run_fpga_experiment2.py
fpga_build/: runner.py  tools.py
fpga_build/hls/: CMakeLists.txt  main.cpp  main.h  main_test.cpp  overlay.bit  overlay.hwh  run_hls.tcl  run_vivado.tcl
fpga_experiment/: dataset.py  overlay.py  run.py  run.sh  run2.py  run2.sh  util.py
research/: combine.py  const.py  produce_article_files.py  speedup.py
research/combined/: comparison.csv  comparison_result.csv  comparison_result.tex  speedup.csv  utilization.csv
research/result/: abalone.csv  appendicitis.csv  automobile.csv  balance.csv  banana.csv  bands.csv  breast.csv  bupa.csv  car.csv  chess.csv  cleveland.csv  contraceptive.csv  dermatology.csv  ecoli.csv  flare.csv  german.csv  glass.csv  hayes-roth.csv  heart.csv  hepatitis.csv  housevotes.csv  ionosphere.csv  iris.csv  led7digit.csv  lymphography.csv  mammographic.csv  marketing.csv  monk-2.csv  mushroom.csv  newthyroid.csv  phoneme.csv  pima.csv  post-operative.csv  saheart.csv  satimage.csv  segment.csv  tae.csv  texture.csv  thyroid.csv  tic-tac-toe.csv  (+10 more)
research/result2/: abalone.csv  appendicitis.csv  automobile.csv  balance.csv  banana.csv  bands.csv  breast.csv  bupa.csv  car.csv  chess.csv  cleveland.csv  contraceptive.csv  dermatology.csv  ecoli.csv  flare.csv  german.csv  glass.csv  hayes-roth.csv  heart.csv  hepatitis.csv  housevotes.csv  ionosphere.csv  iris.csv  led7digit.csv  lymphography.csv  mammographic.csv  marketing.csv  (+23 more)
(+22 files in other folders)
