[tool.poetry]
name = "sevq_fpga"
version = "0.1.0"
description = ""
authors = ["sylwekczmil <sylwekczmil@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
cacp = "0.4.0a0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
